@startuml
skinparam classAttributeIconSize 0

interface EstrategiaModificacion {
    {abstract}+modificar(puntuacion: PuntuacionTirada, modificador: Modificador): void
    {abstract}+sumarValorCarta(puntuacion: PuntuacionTirada, valorCarta: int): void
    {abstract}+puntosCarta(valorCarta: int, modificador: Modificador): int
}

class ModificarMultiplicador
class ModificarPuntos

EstrategiaModificacion <|.. ModificarMultiplicador
EstrategiaModificacion <|.. ModificarPuntos
@enduml